--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,4 +21,12 @@
         android:text="Переданный параметр"
         tools:layout_editor_absoluteX="37dp"
         tools:layout_editor_absoluteY="269dp" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="79dp"
+        tools:layout_editor_absoluteY="504dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
